<resources>
    <string name="app_name">B Y Guide</string>

    <!--Titles-->
    <string name="login_title">Login as a tourist</string>
    <string name="signup_title">Login as a tour guide</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best product</string>
    <string name="login_welcome_txt">Welcome back tourist!\nplease login to be able to book</string>
    <string name="login_welcome_txt1">Welcome back tour guide!\nplease login to receive the requests</string>

    <string name="signup_welcome_txt"> Hello Tour guide!\nplease enter your information below</string>
    <string name="signup_welcome_txt1">Hello Tourist!\nplease enter your information below</string>
    <string name="loading">Loading...</string>

    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Sign up</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Sign up"</string>

    <string name="login_label1">" Login"</string>


    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="STARTPAGE_TITLE">BOOK YOUR GUIDE</string>
    <string name="STARTPAGE_DESCRIBTION">Community of tour guides around Saudi Arabia</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="phone_number">Phone number</string>

    <string name="accountpage_signup">Sign up </string>
    <string name="signupastourist">As a tourist  </string>
    <string name="signupastourguide">As a tour guide</string>

    <string name="accountpage_login">Login </string>
    <string name="loginastourist">As a tourist</string>
    <string name="loginastourguide">As a tour guide</string>


    <string name="loginastourist1">Log in as a tourist</string>
    <string name="loginastourguide1">Log in as a tour guide</string>

    <string name="forgetpassPage">Forget Password </string>
    <string name="emailofforgetpass">Email Address </string>
    <string name="buttonforgetpass">Reset Password </string>
    <string name="forget_pass_image" />

    <string name="booking">Booking</string>
    <string name="balance">Balance</string>
    <string name="title_activity_uploadfilespage">uploadfilespage</string>
    <string name="Change_profile_Image">Change profile Image</string>
    <string name="languages">Languages</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Upload file page-->
    <string name="title">Add essential files</string>
    <string name="upload_message">Please upload your files</string>
    <string name="upload_id">National id </string>
    <string name="upload_cv">CV </string>
    <string name="upload_criminal">Criminal background certificate</string>
    <string name="signup_complete">Sign up (2/2) </string>
    <string name="textview1">No file is selected</string>
    <string name="textview2">No file is selected</string>
    <string name="textview3">No file is selected</string>
    <string name="btn_upload_id">Upload</string>
    <string name="btn_upload_cv">Upload</string>
    <string name="btn_upload_criminal">Upload</string>

    <!--Upload file page-->
    <string name="textview_language">Select all of the languages you speak: </string>


    <!--Select langauge button-->
    <string name="make_an_order">Languages</string>
    <string name="dialog_title">Languages</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="person_name">person name</string>
    <string name="person_signUpAs">person_signupas</string>
    <string name="person_Languages">person_Languages</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="chat">chat</string>
    <string-array name="Languages_item">
        <item>Arabic</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Spanish</item>
        <item>Hindi</item>
        <item>Filipino</item>
        <item>Turkish</item>
        <item>French</item>
        <item>German</item>
        <item>Urdu</item>
        <item>Indonesian</item>
        <item>Russian</item>
        <item>Bengali</item>
        <item>Japanese</item>
        <item>Italian</item>
        <item>Korean</item>
        <item>Portuguese</item>
        <item>Oromo</item>
        <item>Somali</item>
    </string-array>

    <string-array name="numbers_item">
        <item>Just me</item>
        <item>Two people</item>
        <item>Three people </item>
        <item>More than three</item>

    </string-array>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Request">Requests</string>
    <string name="title_activity_list_view_items">list_view_items</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


    <!-- Chat page-->
    <string name="input_placeholder">Write a message</string>
    <string name="city_message">Mention the city you want to work in:</string>
    <string name="city">City</string>
    <string name="send_request">Request</string>

    <string name="about_me">About me</string>
    <string name="Tourist">tourist</string>
    <string name="display_name">display_name</string>
    <string name="selectDate">Select date</string>
    <string name="numberOfpeople">Number of people</string>
    <string name="cancel">Cancel</string>

</resources>
