<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_layout_margin"
            android:layout_marginTop="@dimen/container_layout_margin"
            android:layout_marginEnd="@dimen/container_layout_margin"
            android:layout_marginBottom="@dimen/container_layout_margin"
            tools:ignore="DuplicateIds">

            <TextView
                android:id="@+id/signupreg_title"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="#FF8B3D"

                android:textSize="30sp"
                android:textStyle="bold"
                android:text="Sign Up"

                android:layout_marginTop="30dp"
               />
            <TextView
                android:id="@+id/signup_welcome_msg"
                android:layout_marginTop="12dp"
                style="@style/LabelStyle"
                android:fontFamily="serif"
                android:textStyle="italic"

                android:textColor="#3F3D56"
                android:textSize="16sp"
                android:layout_below="@id/signupreg_title"

                android:text="@string/signup_welcome_txt1"/>


            <EditText
                android:id="@+id/tourg_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/tour_email_address"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@drawable/textbox"/>

            <EditText
                android:id="@+id/tourG_full_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/signup_welcome_msg"
                android:layout_marginTop="47dp"
                android:autofillHints=""
                android:hint="@string/full_name_hint"
                android:inputType="textEmailAddress"
                android:background="@drawable/textbox"
                />

            <EditText
                android:id="@+id/tour_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/tourG_full_name"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"
                android:background="@drawable/textbox"/>

            <EditText
                android:id="@+id/tour_phonenumber"
                style="@style/EditTextStyle"
                android:layout_below="@+id/tourg_password"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:background="@drawable/textbox"/>


            <Button
                android:id="@+id/btn_signup"
                style="@style/Widget.AppCompat.Button.Borderless"


                android:layout_below="@id/tourg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="175dp"
                android:minHeight="50dp"

                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_primary"
                android:text="@string/signup_btn_label"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/login_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"

                >

                <TextView
                    android:id="@+id/have_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/have_account"
                    android:textColor="#3F3D56"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_label1"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/have_account"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:onClick="login"
                    android:text="@string/login_label1"
                    android:clickable="true"
                    android:textColor="#FF8B3D"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toollbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/imagebuttonn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/get_started_btn_label"
            android:paddingStart="@dimen/ic_nav_padding_start"
            android:paddingEnd="@dimen/ic_nav_padding_start"
            android:src="@drawable/icon_back_row"/>
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>