<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/containerLayoutt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#006E2626">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/forgot_password"
            android:contentDescription="@string/forget_pass_image"
            android:gravity="center"
            android:scaleType="center"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:background="#006E2626">

            <ImageButton
                android:id="@+id/imagebuttonn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/get_started_btn_label"
                android:paddingStart="@dimen/ic_nav_padding_start"
                android:paddingEnd="@dimen/ic_nav_padding_start"
                android:src="@drawable/ic_back"
                tools:ignore="MissingConstraints" />

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout


            android:id="@+id/containerrLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">


            <TextView
                android:id="@+id/textView"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif"
              android:textStyle="bold"
                android:text="@string/forgetpassPage"
                android:textColor="#936B68"
                android:textSize="36sp"
                tools:text="@string/forgetpassPage" />

            <EditText
                android:id="@+id/tour_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/imageView4"
                android:layout_marginTop="350dp"
                android:layout_marginBottom="50dp"
                android:autofillHints="mm"
             android:background="@drawable/textbox"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"
                tools:ignore="NotSibling"
                tools:text="@string/emailofforgetpass" />

            <Button
                android:id="@+id/button"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/tour_email_address"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/btn_profile"
                android:text="@string/buttonforgetpass" />


        </RelativeLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>