<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/containerLayout"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/container_layout_margin"
            android:layout_marginTop="@dimen/container_layout_margin"
            android:layout_marginEnd="@dimen/container_layout_margin"
            android:layout_marginBottom="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/login_title"
                android:layout_marginTop="60dp"
                style="@style/LabelStyle"






            android:fontFamily="sans-serif"
                android:textColor="#FF8B3D"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="Login"
                />

            <TextView
                android:id="@+id/login_welcome_msg"
                style="@style/LabelStyle"
                android:fontFamily="serif"
                android:textStyle="italic"

                android:textColor="#3F3D56"
                android:textSize="16sp"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_welcome_txt" />

            <EditText
                android:id="@+id/tour_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/login_welcome_msg"
                android:layout_marginTop="60dp"
                android:autofillHints="mm"
                android:hint="@string/email_address_hint"
                android:background="@drawable/textbox"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/tour_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/tour_email_address"
                android:layout_marginTop="25dp"
                android:autofillHints="kk"
                android:hint="@string/password_hint"
                android:background="@drawable/textbox"
                android:inputType="textPassword" />

            <RelativeLayout
                android:id="@+id/realtivve"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tour_password"
                android:gravity="center">
            <TextView
                android:id="@+id/forgot_password"
                style="@style/LabelStyle"

                android:layout_alignParentEnd="true"
                android:layout_marginTop="57dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/forgot_password"
                android:textColor="#FF8B3D"
                android:textSize="16sp"

                />

            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="175dp"
                android:minHeight="50dp"
                android:layout_marginBottom="30dp"


                android:background="@drawable/btn_primary"
                android:layout_below="@id/forgot_password"
                android:layout_marginTop="19dp"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/login_btn_label"

                />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/sign_up_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_below="@+id/realtivve">

                <TextView
                    android:id="@+id/no_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/no_account"
                    android:textColor="#5C5856"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signup_label4"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/no_account"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:onClick="signup"
                    android:text="@string/signup_btn_label"
                    android:textColor="#FF8B3D"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
        </ScrollView>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="#006E2626"
            android:layout_height="50dp"
            android:layout_width="0dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/imagebuttonn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/get_started_btn_label"
                android:paddingStart="@dimen/ic_nav_padding_start"
                android:paddingEnd="@dimen/ic_nav_padding_start"
                android:src="@drawable/icon_back_row" />
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>